kubernetes/opensearch-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboard
  namespace: opensearch 
  labels:
    app: opensearch-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch-dashboard
  template:
    metadata:
      labels:
        app: opensearch-dashboard
    spec:
      containers:
      - name: opensearch-dashboard
        image: opensearchproject/opensearch-dashboards:latest
        # NOTE: you can increase this resources
        resources:
          requests:
            memory: "512M"
            cpu: "100m"
          limits:
            memory: "512M"
            cpu: "100m"
        ports:
        - containerPort: 5601
          name: http
