kubernetes/opensearch-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboard
  namespace: opensearch
  labels:
    app: opensearch-dashboard
spec:
  ports:
  - port: 80
    name: web
    targetPort: 5601
  selector:
    app: opensearch-dashboard
