kubernetes/opensearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: opensearch
  labels:
    app: opensearch
spec:
  ports:
  - port: 9200
    name: web
    targetPort: 9200
  selector:
    app: opensearch
